--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,8 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+THE_PARENT_PAST_DAYS_TO_FETCH_DATA=7
+
 TWITTER_CLIENT_ID=
 TWITTER_CLIENT_SECRET=
 TWITTER_CALLBACK_URL=
